# Learn_Django

./: .gitignore  README.md
brad-crash-course/: Pipfile  notes.md
brad-crash-course/pollster/: db.sqlite3
dennis-crash-course/: queryDemos.py
dennis-crash-course/crm/: db.sqlite3  manage.py
django-on-docker/: pyproject.toml  requirements.txt
django-on-docker/composeexample/: settings.py
django-q-django/: .env.example  .env.prod.example  Pipfile  Procfile  README.md  configure_prod_envs.py  manage.py
django-q-django/demo_app/: urls.py  views.py
django-q-django/django_q_django/: asgi.py  urls.py  wsgi.py
django-q-django/requirements/: base.txt  dev.txt  prod.txt
docs_app/: manage.py
docs_app/docs_app/: asgi.py  settings.py  urls.py  wsgi.py
docs_app/polls/: admin.py  models.py  tests.py  urls.py  views.py
rest_tutorial/: Pipfile
rest_tutorial/rest_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
rest_tutorial/snippets/: models.py  serializers.py  serializers_with_manul_binding.py  serializers_with_model_serializer.py  urls.py  urls_function_based.py  urls_with_manually_binded_viewsets.py  urls_without_viewsets.py  views.py  views_with_functions.py  views_with_mixins.py  views_with_no_mixins.py  views_with_plain_django.py  views_with_prebuilt_generics.py
testing_django_q/: Pipfile  manage.py
testing_django_q/demo_app/: urls.py  views.py
testing_django_q/testing_django_q/: asgi.py  settings.py  urls.py  wsgi.py
todo_drf/: Pipfile
todo_drf/frontend/: urls.py  views.py
todo_drf/todo_drf/: settings.py  urls.py
(+60 files in other folders)
